# Blackjack-Symulator

./: .gitignore  CMakeLists.txt  Card.h  Dealer.cpp  Dealer.h  Deck.h  Hand.cpp  LICENSE  README-en.md  README-pl.md  README.md  balancewindow.cpp  balancewindow.ui  gamelogic.cpp  gamelogic.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  leaderboardwindow.cpp  leaderboardwindow.h  leaderboardwindow.ui  mainwindow.cpp  mainwindow.ui  resources.qrc  scoremanager.cpp  styledmessagebox.cpp
Leaderboard/: data.txt
src/: CMakeLists.txt  main.cpp
src/game/: Card.cpp  Deck.cpp  Hand.h  Player.cpp  Player.h  gamelogic.cpp
src/score/: scoremanager.cpp  scoremanager.h
src/ui/: balancewindow.cpp  balancewindow.h  gamewindow.cpp  gamewindow.h  leaderboardwindow.cpp  mainwindow.cpp  mainwindow.h  styledmessagebox.h
